kubernetes/base/autobilling-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobilling-client-ingress
  namespace: client  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "autobilling-frontend"
spec:
  tls:
  - hosts:
    - autobilling.vibevaulttech.co.in
    secretName: client-ssl-secret
  rules:
  - host: autobilling.vibevaulttech.co.in
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autobilling-frontend-service
            port:
              number: 4000
